--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,9 +22,7 @@ en:
         maintenance_invoice_received: 'maintenance invoice received'
         period_in_days: 'period in days'
         customer_project_reference: 'Customer/Project'
+        license_product_name: Productname
+        license_count: Count
 
-  permission_rlm_view_licenses: 'See licenses'
-  permission_rlm_edit_licenses: 'Edit licenses'
-  permission_rlm_see_license_sale_price: 'See license sale price'
-  permission_rlm_see_license_purchase_price: 'See license purchase price'
 
