added context menu

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,4 +1,7 @@
 de:
+  button_rlm_create_invoicing: "Abrechnung erstellen"
+  label_rlm_non_license_tickets_selected: "Sie haben auch nicht-Lizens Tickets gewählt"
+  label_rlm_closed_tickets_selected: "Sie haben auch geschlossene Tickets gewählt"
   rlm:
     # Map to the 'entries' values for given module/setup type
     entries:
