--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -31,5 +31,6 @@ de:
         license_lef: LEF
     errors:
       parent_not_a_license: Das übergeordnete Ticket ist nicht vom Typ 'Lizenz'
-      no_parent_found: Tickets vom Typ 'Lizenzerweiterung' müssen einem Ticket vom Typ 'Lizenz' untergeordnet sein      
+      no_parent_found: Tickets vom Typ 'Lizenzerweiterung' müssen einem Ticket vom Typ 'Lizenz' untergeordnet sein
+      license_count_blank: Anzahl Lizenzen muss aufgefüllt werden      
 
