--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,7 +11,7 @@ en:
   activerecord:
     attributes:
       easy_helpdesk_projects:
-        mail_domain_for_licenses: Maildomain
+        mail_domain_for_licenses: Maildomain (example.com) 
     
   rlm:
     # Map to the 'entries' values for given module/setup type
