--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -7,7 +7,9 @@ de:
   label_rlm_closed_tickets_selected: "Sie haben auch geschlossene Tickets gewählt"
   label_rlm_confirm_merge: Möchten Sie diese Einträge wirklich zusammenführen? Dies kann nicht rückgänging gemacht werden.
   label_easy_helpdesk_license_domain: "Domain für Lizenz-Mails"
-  
+  label_rlm_default_user_id: Lizenznutzer
+  label_rlm_default_user_id_info: "Neue Lizenzen werden standardmäßig an %{user} zugewiesen"
+
   activerecord:
     attributes:
       easy_helpdesk_project:
@@ -42,5 +44,5 @@ de:
     errors:
       parent_not_a_license: Das übergeordnete Ticket ist nicht vom Typ 'Lizenz'
       no_parent_found: Tickets vom Typ 'Lizenzerweiterung' müssen einem Ticket vom Typ 'Lizenz' untergeordnet sein
-      license_count_blank: Anzahl Lizenzen muss aufgefüllt werden      
+      license_count_blank: Anzahl Lizenzen muss aufgefüllt werden
 
